make a polymer 2.0 branch

--- a/app-changelog.html
+++ b/app-changelog.html
@@ -1,5 +1,5 @@
 <link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="bower_components/polymer/polymer.html">
+<link rel="import" href="bower_components/polymer/polymer-element.html">
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="bower_components/marked-element/marked-element.html">
 <link rel="import" href="bower_components/neon-animation/animations/scale-up-animation.html">
@@ -38,7 +38,7 @@ from `marked-element`, so it takes the same options. There are no dialog options
       <h2>[[heading]]</h2>
       <div> <!-- div needed for spacing. -->
         <paper-dialog-scrollable id="scroller" >
-          <content select=".markdown-html"></content>
+          <slot name="markdown-html"></content>
           <div id="content" class="hidden"></div>
         </paper-dialog-scrollable>
       </div>
@@ -49,85 +49,87 @@ from `marked-element`, so it takes the same options. There are no dialog options
   </template>
 
   <script>
-    Polymer({
+    class AppChangelog extends Polymer.Element {
 
-      is: 'app-changelog',
+      static get is(){ return 'app-changelog' }
+      static get config(){ return {
+        properties: {
 
-      properties: {
+          /** The text to put on the OK/close button. */
+          buttonText: {
+            value: 'Got It!',
+            type: String
+          },
 
-        /** The text to put on the OK/close button. */
-        buttonText: {
-          value: 'Got It!',
-          type: String
-        },
+          /** The title of the dialog */
+          heading: { type: String, value: 'What\'s New'},
 
-        /** The title of the dialog */
-        heading: { type: String, value: 'What\'s New'},
+          /** (not implemented) Show only versions up to this version.*/
+          //currentVersion: String,
 
-        /** (not implemented) Show only versions up to this version.*/
-        //currentVersion: String,
+          /** (not implemented) Show only the version given in `current-version` */
+          //showOnlyVersion: Boolean,
 
-        /** (not implemented) Show only the version given in `current-version` */
-        //showOnlyVersion: Boolean,
+          /** The source file, if you want to use an external file. */
+          src: String,
 
-        /** The source file, if you want to use an external file. */
-        src: String,
+          /** The source doc to display, as a String. Supercedes `src` */
+          //doc: String,
 
-        /** The source doc to display, as a String. Supercedes `src` */
-        //doc: String,
+          /** Whether or not to show the dialog */
+          shown: {
+            type: Boolean,
+            notify: true,
+            default: false,
+            observer: 'show'
+          },
 
-        /** Whether or not to show the dialog */
-        shown: {
-          type: Boolean,
-          notify: true,
-          default: false,
-          observer: 'show'
-        },
+          /**
+           * The markdown source that should be rendered by this element.
+           */
+          markdown: {
+            observer: 'render',
+            type: String,
+            value: null
+          },
+          /**
+           * Conform to obscure parts of markdown.pl as much as possible. Don't fix any of the original markdown bugs or poor behavior.
+           */
+          pedantic: {
+            observer: 'render',
+            type: Boolean,
+            value: false
+          },
+          /**
+           * Sanitize the output. Ignore any HTML that has been input.
+           */
+          sanitize: {
+            observer: 'render',
+            type: Boolean,
+            value: false
+          },
+          /**
+           * Use "smart" typographic punctuation for things like quotes and dashes.
+           */
+          smartypants: {
+            observer: 'render',
+            type: Boolean,
+            value: false
+          },
+          /**
+           * Callback function invoked by Marked after HTML has been rendered.
+           * It must take two arguments: err and text and must return the resulting text.
+           */
+          callback: {
+            observer: 'render',
+            type: Function,
+            value: null
+          }
+        }}
+      }
 
-        /**
-         * The markdown source that should be rendered by this element.
-         */
-        markdown: {
-          observer: 'render',
-          type: String,
-          value: null
-        },
-        /**
-         * Conform to obscure parts of markdown.pl as much as possible. Don't fix any of the original markdown bugs or poor behavior.
-         */
-        pedantic: {
-          observer: 'render',
-          type: Boolean,
-          value: false
-        },
-        /**
-         * Sanitize the output. Ignore any HTML that has been input.
-         */
-        sanitize: {
-          observer: 'render',
-          type: Boolean,
-          value: false
-        },
-        /**
-         * Use "smart" typographic punctuation for things like quotes and dashes.
-         */
-        smartypants: {
-          observer: 'render',
-          type: Boolean,
-          value: false
-        },
-        /**
-         * Callback function invoked by Marked after HTML has been rendered.
-         * It must take two arguments: err and text and must return the resulting text.
-         */
-        callback: {
-          observer: 'render',
-          type: Function,
-          value: null
-        }
-      },
-
-      ready: function() {
+      connectedCallback() {
+        super.connectedCallback()
         if (!this.markdown) {
           // Use the Markdown from the first `<script>` descendant whose MIME type starts with
           // "text/markdown". Script elements beyond the first are ignored.
@@ -136,21 +138,21 @@ from `marked-element`, so it takes the same options. There are no dialog options
             this.markdown = this._unindent(markdownElement.textContent);
           }
         }
-      },
+      }
 
       /** Show the dialog, and optionally set a new markdown text using the `new_val` parameter.*/
-      show: function(new_val){
+      show(new_val) {
         let to_show = new_val || new_val == undefined
         if(to_show) this.$.dlg.open()
-      },
+      }
 
       /** Handles the response when the ajax call is loaded*/
-      _handleAjaxResponse: function(evt, iron_request){
+      _handleAjaxResponse(evt, iron_request) {
         console.log('AJAX: ',evt, iron_request)
         this.markdown = iron_request.response
         console.log(iron_request.resposne)
         this.render()
-      },
+      }
 
       /**
        * Renders `markdown` to HTML when the element is attached.
@@ -164,22 +166,22 @@ from `marked-element`, so it takes the same options. There are no dialog options
        *    any markdown.
        *
        */
-      attached: function() {
+      attached() {
         this._attached = true;
         this._outputElement = this.outputElement;
         this.render();
-      },
+      }
 
-      detached: function() {
+      detached() {
         this._attached = false;
-      },
+      }
 
       /**
        * Unindents the markdown source that will be rendered.
        */
-      unindent: function(text) {
+      unindent(text) {
         return this._unindent(text);
-      },
+      }
 
       get outputElement () {
         var child = Polymer.dom(this).queryDistributedElements('.markdown-html')[0];
@@ -189,7 +191,7 @@ from `marked-element`, so it takes the same options. There are no dialog options
 
         this.toggleClass('hidden', false, this.$.content);
         return this.$.content;
-      },
+      }
 
       /**
        * The `marked-render-complete` event is fired once Markdown to HTML
@@ -208,7 +210,7 @@ from `marked-element`, so it takes the same options. There are no dialog options
        * markdown via `<script type="text/markdown">` after this element has been
        * constructed (or updating that markdown).
        */
-      render: function() {
+      render() {
         if (!this._attached) return;
         if (!this.markdown) {
           Polymer.dom(this._outputElement).innerHTML = '';
@@ -222,14 +224,14 @@ from `marked-element`, so it takes the same options. There are no dialog options
         };
         Polymer.dom(this._outputElement).innerHTML = marked(this.markdown, opts, this.callback);
         this.fire('marked-render-complete');
-      },
+      }
 
-      _highlight: function(code, lang) {
+      _highlight(code, lang) {
         var event = this.fire('syntax-highlight', {code: code, lang: lang});
         return event.detail.code || code;
-      },
+      }
 
-      _unindent: function(text) {
+      _unindent(text) {
         if (!text) return text;
         var lines  = text.replace(/\t/g, '  ').split('\n');
         var indent = lines.reduce(function(prev, line) {
@@ -243,6 +245,8 @@ from `marked-element`, so it takes the same options. There are no dialog options
         return lines.map(function(l) { return l.substr(indent); }).join('\n');
       }
 
-    });
+    }
+    Object.assign(AppChangelog, Polymer.NeonAnimatableBehavior)
+    customElements.define(AppChangelog.is, AppChangelog)
   </script>
 </dom-module>
