--- a/app-changelog.html
+++ b/app-changelog.html
@@ -1,9 +1,9 @@
-<link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="bower_components/polymer/polymer-element.html">
-<link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
-<link rel="import" href="bower_components/marked-element/marked-element.html">
-<link rel="import" href="bower_components/neon-animation/animations/scale-up-animation.html">
-<link rel="import" href="bower_components/neon-animation/animations/scale-down-animation.html">
+<link rel="import" href="../iron-ajax/iron-ajax.html">
+<link rel="import" href="../polymer/polymer-element.html">
+<link rel="import" href="../paper-dialog/paper-dialog.html">
+<link rel="import" href="../marked-element/marked-element.html">
+<link rel="import" href="../neon-animation/animations/scale-up-animation.html">
+<link rel="import" href="../neon-animation/animations/scale-down-animation.html">
 
 <!--
 `app-changelog`
